--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
     <main>
 
+        <p>hola</p>
     <p><br>En esta web encontrarás 13 hitos de la historia de internet bastante importantes, y que, aunque no sean todos los que ha habido, nunca sobra aportar esta información</p>
     
     <article class="cuadradote">
