--- a/index.html
+++ b/index.html
@@ -26,9 +26,7 @@
     </header>
 
     <main>
-
-        <p>hola</p>
-    <p><br>En esta web encontrarás 13 hitos de la historia de internet bastante importantes, y que, aunque no sean todos los que ha habido, nunca sobra aportar esta información</p>
+    <p><br>hola En esta web encontrarás 13 hitos de la historia de internet bastante importantes, y que, aunque no sean todos los que ha habido, nunca sobra aportar esta información</p>
     
     <article class="cuadradote">
         <header id="Virus"><h2>1971 - El primer virus de la historia: Creepeer</h2></header>
